<resources>
    <string name="app_name">Trashify</string>
    <string name="banner">Banner</string>

    <!--Auth-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="login">LogIn</string>
    <string name="logout">Log Out</string>

    <!--Login-->
    <string name="message_login">Welcome to Trashify</string>
    <string name="title_login_page">Have an account already? Let\'s Login</string>

    <!--Hint-->
    <string name="Hint_name">John Doe</string>
    <string name="Hint_email">johndoe@gmail.com</string>
    <string name="Hint_password">johndoe1234</string>

    <!--Register-->
    <string name="message_register">Let\'s register first</string>
    <string name="register_text_button">Register here</string>
    <string name="login_text_button">LogIn here</string>

    <!--Button add story-->
    <string name="addphoto">Add Photo</string>

    <!--History-->
    <string name="history">History</string>

    <!--Upload-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="descriptions">Descriptions</string>

    <string name="empty_description_warning">Description cannot be empty</string>
    <string name="empty_image_warning">Please add image</string>
    <string name="warn_8_char_pass">Password must be at least 8 digits</string>

    <!--About-->
    <string name="nama_about">Your Name Here</string>
    <string name="gmail_about">Your Email Here</string>
    <string name="AddGambarSampah">Add Trash</string>
    <string name="Profile">Profile</string>
    <string name="AddProfilePicture">Add PP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Hint_confirm_password">johndoe1234</string>

</resources>
