<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:civ_border_width="2dp"
        android:src="@drawable/baseline_person_24"
        app:civ_border_color="#4CAF50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/AddProfilePicture"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintTop_toTopOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="@id/profileImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        app:backgroundTint="#B39DDB"/>

    <TextView
        android:id="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nama_about"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

    <TextView
        android:id="@+id/about_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gmail_about"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_name"
        app:drawableLeftCompat="@drawable/baseline_email_24"
        android:drawablePadding="10dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_gmail"
        app:drawableRightCompat="@drawable/baseline_logout_24"/>

    <!-- BOTTOM NAVBAR START -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:background="#FFFFFF">

            <Button
                android:id="@+id/Main"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:contentDescription="@string/history"
                android:paddingTop="15dp"
                app:drawableTopCompat="@drawable/baseline_view_list_24" />

            <Button
                android:id="@+id/About"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:contentDescription="@string/Profile"
                android:paddingTop="15dp"
                app:drawableTopCompat="@drawable/baseline_person_24_clicked" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/border_shadow"
            app:layout_anchor="@+id/RelativeLayout"
            app:layout_anchorGravity="top"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/AddGambarSampah"
            android:src="@drawable/baseline_add_a_photo_24"
            app:layout_anchor="@id/RelativeLayout"
            app:layout_anchorGravity="top|center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="#4CAF50"
            style="@style/FloatingActionButtonStyle2" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <!-- BOTTOM NAVBAR END-->

</androidx.constraintlayout.widget.ConstraintLayout>
