<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListStories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="5dp"
            tools:listitem="@layout/item_story"
            android:scrollbarSize="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

<!-- BOTTOM NAVBAR START -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:background="#FFFFFF">

            <Button
                android:id="@+id/Main"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:contentDescription="@string/history"
                android:paddingTop="15dp"
                app:drawableTopCompat="@drawable/baseline_view_list_24_clicked" />

            <Button
                android:id="@+id/About"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:contentDescription="@string/Profile"
                android:paddingTop="15dp"
                app:drawableTopCompat="@drawable/baseline_person_24" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/border_shadow"
            app:layout_anchor="@+id/RelativeLayout"
            app:layout_anchorGravity="top"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/AddGambarSampah"
            android:src="@drawable/baseline_add_a_photo_24"
            app:layout_anchor="@id/RelativeLayout"
            app:layout_anchorGravity="top|center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="#4CAF50"
            style="@style/FloatingActionButtonStyle2" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <!-- BOTTOM NAVBAR END-->

</androidx.constraintlayout.widget.ConstraintLayout>